# ZaraStockTracker

./: .env.example  .gitignore  BASLAT.command  INSTALL.md  LICENSE  README.md  Zara Tracker Menu.spec  ZaraLauncher.spec  ZaraStockTracker.spec  app.py  build_log.txt  cache.py  config.py  database.py  desktop_app.py  exceptions.py  icon.icns  install.sh  menu_bar_app.py  notifications.py  pyproject.toml  requirements.txt  scraper.py  setup_menu.py  zara_scraper.py
src/zara_tracker/: __init__.py  config.py
src/zara_tracker/core/: __init__.py  cache.py  models.py  repository.py  scraper.py
src/zara_tracker/db/: __init__.py  engine.py  repository.py  tables.py
src/zara_tracker/models/: __init__.py  product.py  settings.py
src/zara_tracker/scraper/: __init__.py  cache.py  zara.py
src/zara_tracker/services/: __init__.py  notification_service.py  product_service.py  stock_service.py
src/zara_tracker/ui/: __init__.py  components.py  native_dashboard.py
src/zara_tracker/ui/pages/: __init__.py  add_product.py  settings.py  tracking.py
tests/: conftest.py  test_cache.py  test_database.py  test_exceptions.py  test_notifications.py  test_scraper.py
