[project]
name = "zara-stock-tracker"
version = "6.0.0"
description = "Zara Stock Tracker - Monitor product availability with notifications"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sqlalchemy>=2.0.0",
    "streamlit>=1.30.0",
    "requests>=2.31.0",
    "rumps>=0.4.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
